--- a/internal.html
+++ b/internal.html
@@ -27,6 +27,9 @@
 			<div class="contact2">
 			<div class="section5">
 			<h5>
+				<span class="note2">Infographic</span>
+				<p><a href="Infographic.pdf" target="_blank">Infographic:</a><br>
+				I designed this infographic to update DISTek’s employees on the results of the most recent employee satisfaction survey and reinforce the actions being taken to address employees’ concerns. This was part of a tiered communication plan - CEO presentation at Town Hall, CEO email to all employees (with this attached), and discussions during team meetings.</p><br>
 				<span class="note2">Newsletters</span>
 				<p><a href="In the Air sample.pdf" target="_blank">Intranet Edition:</a></p><p>
 					I worked with PrimeCo’s IT department to create a digital template for the company’s newsletter, <i>In the Air.</i>  This “modernized” edition allowed the company’s 3,000 employees to click on specific areas of interest and later search the archives for specific keywords.  This example includes an article which I wrote under President Lowell McAdam’s signature and two feature stories.
