--- a/corporate.html
+++ b/corporate.html
@@ -53,7 +53,7 @@
 			</h5>
 			</div>
 				<div class="section7">
-					<img src="blog photo.jpg" width="450" slt"IN"> 
+					<img src="blog_photo.jpg" width="450" alt="IN"> 
 				</div>
 			</div>
 		<h3>		
