--- a/internal.html
+++ b/internal.html
@@ -45,24 +45,24 @@
 				<br><a href="portfolio.html" ><button>Back </button></a>	
 			</div>
 					<div class="section7">
-						<img src="employee comm.jpg" width="450" slt"IN"> 
+						<img src="employee comm.jpg" width="450" alt"IN"> 
 					</div>
 			</div>
 			</h5>
 			<h3>
 				<div class="contact">
 					<div class="section1">
-						<img src="phone.png"width="100" height="100" slt"IN">
+						<img src="phone.png"width="100" height="100" alt"IN" class="set2">
 						<p>Call: </p>
 						<p>319-575-3440</p>
 					</div>
 					<div class="section2">
-						<img src="email.png" width="100" height="100" slt"IN"> 
+						<img src="email.png" width="100" height="100" alt"IN" class="set2"> 
 						<p>Contact: </p>
 						<p> mdpezley@yahoo.com</p>
 					</div>
 					<div class="section3">
-						<img src="linked.png" width="100" height="100" slt"IN"> 
+						<img src="linked.png" width="100" height="100" alt"IN" class="set2"> 
 						<p> Connect: </p>
 						<p><a href="https://www.linkedin.com/in/michelle-d-pezley" target="_blank">www.linkedin.com/in/michelle-d-pezley </a></p>
 					</div>
