--- a/portfolio.html
+++ b/portfolio.html
@@ -25,17 +25,17 @@
 			<h5>
 				<div class="contact">
 					<div class="section1">
-						<img src="Corporate Communications.jpg" width="500" slt"IN"> 
+						<img src="Corporate Communications.jpg" width="500" alt"IN" class="set1"> 
 						<p>Corporate Communications </p>
 						<a href="corporate.html" ><button>Writing Samples </button></a>				
 					</div>
 					<div class="section2">
-						<img src="Internal Communications.jpg" width="500" slt"IN"> 
+						<img src="Internal Communications.jpg" width="500" alt"IN" class="set1"> 
 						<p>Internal Communications</p>
 						<a href="internal.html" ><button>Writing Samples </button></a>
 					</div>
 					<div class="section3">
-						<img src="Marketing1.jpg" width="500" slt"IN"> 
+						<img src="Marketing1.jpg" width="500" alt"IN" class="set1"> 
 						<p>Marketing </p>
 						<a href="marketing.html" ><button>Work Samples </button></a>
 					</div>
@@ -44,17 +44,17 @@
 			<h3>				
 				<div class="contact">
 					<div class="section1">
-						<img src="phone.png"width="100" height="100" slt"IN">
+						<img src="phone.png"width="100" height="100" alt"IN" class="set2">
 						<p>Call: </p>
 						<p>319-575-3440</p>
 					</div>
 					<div class="section2">
-						<img src="email.png" width="100" height="100" slt"IN"> 
+						<img src="email.png" width="100" height="100" alt"IN" class="set2"> 
 						<p>Contact: </p>
 						<p> mdpezley@yahoo.com</p>
 					</div>
 					<div class="section3">
-						<img src="linked.png" width="100" height="100" slt"IN"> 
+						<img src="linked.png" width="100" height="100" alt"IN" class="set2"> 
 						<p> Connect: </p>
 						<p><a href="https://www.linkedin.com/in/michelle-d-pezley" target="_blank">www.linkedin.com/in/michelle-d-pezley </a></p>
 					</div>
