--- a/about.html
+++ b/about.html
@@ -32,14 +32,11 @@
 					<br> 
 					<div class="contact4">
 						<div class="section8">
-							<div class="button1">
-								<a href="resume.pdf" target="_blank">Resume</a> 
-							</div><br> <br>
+							<a href="resume.pdf" target="_blank"><button>Resume </button> </a>
+							<br> <br>
 						</div>
 						<div class="section9">
-							<div class="button1">
-								<a href="Skills.pdf" target="_blank" >Skills</a>
-							</div>
+							<a href="Skills.pdf" target="_blank"><button>Skills </button> </a>
 						</div>
 					</div>
 				</div>
