--- a/corporate.html
+++ b/corporate.html
@@ -48,12 +48,18 @@
 				</span>
 				<p><a href="Younkers.pdf" target="_blank">Younkers Opens New Home Store In Westland Mall:</a><br>
 				As the spokesperson for Westland and Muscatine Malls, I secured media coverage by writing press releases and making verbal pitches.		
+				<p>
+				<span class="note2">
+					<br>Media and Public Events and Support Materials
+				</span>
+				<p><a href="mall redevelopment announcement.pdf" target="_blank">Muscatine Mall Redevelopment Announcement:</a>
+				<p>Gaining merchant and community support for the Muscatine Mall’s redevelopment was critical to the mall’s future success.  The communication pieces and events outlined in this communications plan were an intricate part of that process and centered around the key messages covered in my press release and executive preparation (Q&A answers).
 				<p><br><a href="portfolio.html" ><button>Back </button></a>	 
 				</p><br> 
 			</h5>
 			</div>
 				<div class="section7">
-					<img src="blog_photo.jpg" width="450" alt="IN"> 
+					<img src="Corporate Communications 1.jpg" width="450" alt="IN"> 
 				</div>
 			</div>
 		<h3>		
