--- a/marketing.html
+++ b/marketing.html
@@ -35,12 +35,7 @@
 							Each year I created a comprehensive marketing plan for each mall along with customized marketing and/or communication plans for each campaign.
 							<p><br><a href="Holiday 2000 Marketing Plan.pdf" target="_blank">Westland Mall 2000 Holiday Marketing Campaign:</a><p> 
 							In an effort to increase comparative in-line retail sales and average daily traffic numbers, I strategically created events in addition to placing advertising and securing media coverage for key shopping seasons, targeting selected demographic groups.<p>
-							<span class="note2">
-								<br>Media and Public Events and Support Materials
-							</span>
-							<p><a href="mall redevelopment announcement.pdf" target="_blank">Muscatine Mall Redevelopment Announcement:</a>
-							<p>Gaining merchant and community support for the Muscatine Mall’s redevelopment was critical to the mall’s future success.  The communication pieces and events outlined in this communications plan were an intricate part of that process and centered around the key messages covered in my press release and executive preparation (Q&A answers).
-							<p><br><a href="portfolio.html" ><button>Back </button></a>
+							<br><a href="portfolio.html" ><button>Back </button></a>
 					</p>
 						</h5>	
 				</div>
