--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</header>
 		<main>
 			<h2>
-				<p>“Always bear in mind that your own resolution <br> to succeed is more important than any other one thing.” <br> - Abraham Lincoln </p>
+				<p>“Plan confidently. Create passionately. Execute boldly.” <br> - Source unknown </p>
 			</h2>
 			<h3>							
 				<div class="contact">
