Updated to include HGS

--- a/internal.html
+++ b/internal.html
@@ -27,10 +27,16 @@
 			<div class="contact2">
 			<div class="section5">
 			<h5>
+				<span class="note2">Brochure</span>
+				<p><a href="New Joiner Brochure.pdf" target="_blank">New Hire Brochure:</a><br>
+				HGS onboards numerous new employees weekly. We needed a piece to educate these new employees about the company they were joining. I created this electronic brochure to welcome and introduce employees to the company. This piece is emailed to new employees’ home email addresses about 1 week before their first day of work. I designed this piece to augment the new hire orientation which all employees receive on their first day of work. I also redesigned the orientation slides to make both pieces match the corporate brand guidelines. I created two versions of this brochure – one for the United States and another for Canada. Both versions went into use within my first two months at HGS. I conceptualized the piece, wrote the text, and oversaw a corporate graphic designer develop the creative of this piece.</p><br>
 				<span class="note2">Infographic</span>
 				<p><a href="Infographic.pdf" target="_blank">Infographic:</a><br>
 				I designed this infographic to update DISTek’s employees on the results of the most recent employee satisfaction survey and reinforce the actions being taken to address employees’ concerns. This was part of a tiered communication plan - CEO presentation at Town Hall, CEO email to all employees (with this attached), and discussions during team meetings.</p><br>
 				<span class="note2">Newsletters</span>
+				<p><a href="HGS USA Newsletter - June 2022.pdf" target="_blank">Digital Edition:</a></p><p>
+					In my first month at HGS, I identified the need for a newsletter, set goals for the publication, determined what types of articles would fulfill the goals, and conceptualized the layout. Then, I oversaw a corporate graphic designer in creating the newsletter’s layout to match the corporate brand. We also considered the need to have the piece be responsive as employees would be reading the newsletter on their laptops and phones. At the same time, we needed to be able to print a PDF version for email distribution and posting on internal sites. The first edition (this copy) was distributed less than two months after I joined HGS. Since this edition, I have enhanced and grown this publication based upon employee feedback and newly identified educational needs. I manage an editorial committee who helps identify the story ideas. I am responsible for researching and writing the content, gaining the needed approvals, and supervising the corporate graphic designer who formats each edition.
+				</p><br>
 				<p><a href="In the Air sample.pdf" target="_blank">Intranet Edition:</a></p><p>
 					I worked with PrimeCo’s IT department to create a digital template for the company’s newsletter, <i>In the Air.</i>  This “modernized” edition allowed the company’s 3,000 employees to click on specific areas of interest and later search the archives for specific keywords.  This example includes an article which I wrote under President Lowell McAdam’s signature and two feature stories.
 				</p><br>
